--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^5.0.14",
     "@mui/material": "^6.0.1",
     "@react-three/fiber": "^8.17.6",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +20,9 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "three": "^0.168.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
