--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
+    "@mediapipe/tasks-vision": "^0.10.15",
     "@mui/material": "^6.0.1",
     "@react-three/drei": "^9.111.5",
     "@react-three/fiber": "^8.17.6",
